--- a/index.html
+++ b/index.html
@@ -1,49 +1,54 @@
 <!doctype html>
 <html lang="en-us">
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Assignment Portal for Shayla Dance</title>
-  <meta name="description" content="Assignment portal for Shayla Dance in WDD 230-03 at Brigham Young University - Idaho">
-<link href="./css/main.css" rel="stylesheet">
+  <meta name="description"
+    content="Assignment portal for Shayla Dance in WDD 230-03 at Brigham Young University - Idaho">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+  <link href="./css/main.css" rel="stylesheet">
 </head>
 
 <body>
 
-<header>
-<h1>Shayla Dance</h1>
-</header>
+  <header>
+    <h1>Shayla Dance</h1>
+  </header>
 
-<main>
+  <main>
 
-<div>
-  <img src="./images/portraitofshayla.jpg" alt="Picture of Shayla Dance with a gray coat">
-<h2 class="mainheading">WDD230: Assignment Portal</h2>
+    <div>
+      <img src="./images/portraitofshayla.jpg" alt="Picture of Shayla Dance with a gray coat">
+      <h2 class="mainheading">WDD230: Assignment Portal</h2>
 
 
-<ul>
-  <li>Lesson 02:</li>
-  <li>Lesson 03:</li>
-  <li>Lesson 04:</li>
-  <li>Lesson 05:</li>
-  <li>Lesson 06:</li>
-  <li>Lesson 07:</li>
-  <li>Lesson 08:</li>
-  <li>Lesson 09:</li>
-  <li>Lesson 10:</li>
-</ul>
-</div>
+      <ul>
+        <li>Lesson 02:</li>
+        <li>Lesson 03:</li>
+        <li>Lesson 04:</li>
+        <li>Lesson 05:</li>
+        <li>Lesson 06:</li>
+        <li>Lesson 07:</li>
+        <li>Lesson 08:</li>
+        <li>Lesson 09:</li>
+        <li>Lesson 10:</li>
+      </ul>
+    </div>
 
-</main>
+  </main>
 
-<footer>
-  <p>
-    &copy; <span id="currentYear"></span>| Shayla Dance | Utah | <a href='https://www.byui.edu/online' target='_blank'>BYUI Online Learning</a>
-  </p>
-<p>
-  Last Updated: <span id="latestEdit"></span>
-</p>
-</footer>
-<script src="./javascript/time.js"></script>
+  <footer>
+    <p>
+      &copy; <span id="currentYear"></span>| Shayla Dance | Utah | <a href='https://www.byui.edu/online'
+        target='_blank'>BYUI Online Learning</a>
+    </p>
+    <p>
+      Last Updated: <span id="latestEdit"></span>
+    </p>
+  </footer>
+  <script src="./javascript/time.js"></script>
 </body>
-</html> 
+
+</html>
