--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
   <meta name="description"
     content="Assignment portal for Shayla Dance in WDD 230-03 at Brigham Young University - Idaho">
 
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Anton&family=Libre+Franklin&display=swap" rel="stylesheet">
-  <link href="./css/main.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+  <link href="./css/small.css" rel="stylesheet">
+  <link href="./css/medium.css" rel="stylesheet">
 </head>
 
 <body>
