--- a/index.html
+++ b/index.html
@@ -11,19 +11,20 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Anton&family=Libre+Franklin&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-  <link href="./css/small.css" rel="stylesheet">
+  <link rel="stylesheet" href="./css/small.css">
+  <link rel="stylesheet" href="./css/medium.css">
 </head>
 
 <body>
 
   <header>
+    <img src="./images/portraitofshayla.jpg" alt="Picture of Shayla Dance with a gray coat">
     <h1>Shayla Dance</h1>
   </header>
 
   <main>
 
     <div>
-      <img src="./images/portraitofshayla.jpg" alt="Picture of Shayla Dance with a gray coat">
       <h2 class="mainheading">WDD230: Assignment Portal</h2>
 
 
