--- a/Week 2/design-principles.html
+++ b/Week 2/design-principles.html
@@ -4,55 +4,43 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Assignment Portal for Shayla Dance</title>
+  <title>Design Principles Document by Shayla Dance</title>
   <meta name="description"
-    content="Assignment portal for Shayla Dance in WDD 230-03 at Brigham Young University - Idaho">
+    content="Shayla Dance's Lesson 2 assignment for WDD230 BYU-Idaho">
 
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Anton&family=Libre+Franklin&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-  <link rel="stylesheet" href="./css/small.css">
-  <link rel="stylesheet" href="./css/medium.css">
+  <link rel="stylesheet" href="#">
+  <link rel="stylesheet" href="#">
+  <link rel="stylesheet" href="#">
 </head>
 
 <body>
 
   <header>
-    <img src="./images/portraitofshayla.jpg" alt="Picture of Shayla Dance with a gray coat">
-    <h1>Shayla Dance</h1>
+    <h1>Design Principles Document</h1>
+    <h2>Shayla Dance</h2>
   </header>
 
   <main>
 
-    <div>
-      <h2 class="mainheading">WDD230: Assignment Portal</h2>
-
-
-      <ul>
-        <li>Lesson 02:</li>
-        <li>Lesson 03:</li>
-        <li>Lesson 04:</li>
-        <li>Lesson 05:</li>
-        <li>Lesson 06:</li>
-        <li>Lesson 07:</li>
-        <li>Lesson 08:</li>
-        <li>Lesson 09:</li>
-        <li>Lesson 10:</li>
-      </ul>
-    </div>
+      <section></section>
+      <section></section>
+      <section></section>
 
   </main>
 
   <footer>
     <p>
-      &copy; <span id="currentYear"></span>| Shayla Dance | Utah | <a href='https://www.byui.edu/online'
+      &copy; <span id="lesson2year"></span>| Shayla Dance | <a href='https://www.byui.edu/online'
         target='_blank'>BYUI Online Learning</a>
     </p>
     <p>
-      Last Updated: <span id="latestEdit"></span>
+      Last Updated: <span id="lesson2latestEdit"></span>
     </p>
   </footer>
-  <script src="./javascript/time.js"></script>
+  <script src="./javascript/lesson2year.js"></script>
 </body>
 
 </html>
