--- a/Home/index.html
+++ b/Home/index.html
@@ -29,7 +29,7 @@
 
 
       <ul>
-        <li>Lesson 02:</li>
+        <li>Lesson 02: <a href=""</li>
         <li>Lesson 03:</li>
         <li>Lesson 04:</li>
         <li>Lesson 05:</li>
