--- a/week1/index.html
+++ b/week1/index.html
@@ -29,7 +29,7 @@
 
 
       <ul>
-        <li><a href="design-principles.html">Lesson 2 Assignment</a></li>
+        <li><a href="../week2/design-principles.html">Lesson 2 Assignment</a></li>
         <li>Lesson 03:</li>
         <li>Lesson 04:</li>
         <li>Lesson 05:</li>
