--- a/week2/design-principles.html
+++ b/week2/design-principles.html
@@ -5,8 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Design Principles Document by Shayla Dance</title>
-  <meta name="description"
-    content="Shayla Dance's Lesson 2 assignment for WDD230 BYU-Idaho">
+  <meta name="description" content="Shayla Dance's Lesson 2 assignment for WDD230 BYU-Idaho">
 
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Anton&family=Libre+Franklin&display=swap" rel="stylesheet">
@@ -25,22 +24,67 @@
 
   <main>
 
-      <section></section>
-      <section></section>
-      <section></section>
+    <section id="principle1">
+      <h3 class="principle">Contrast</h3>
+      <p class="company">Uber</p>
+      <p class="link">
+        <a href="https://www.uber.com/">www.uber.com</a>
+      </p>
+      <p class="image">
+        <img src="../week2/images/uberexample.JPG" alt="Uber's home page" />
+      </p>
+      <p class="description">
+        Uber's design is minimalistic with maximum contrast in black and white. The black background on the header with
+        contrasting button backgrounds keeps the interface interesting and easy to read. The stark contrast makes it
+        especially easy to navigate and read on a smart phone as well as a desktop computer.
+      </p>
+    </section>
+    <section id="principle2">
+      <h3 class="principle">Proximity</h3>
+      <p class="company">Target</p>
+      <p class="link">
+        <a href="https://www.target.com/">www.target.com</a>
+      </p>
+      <p class="image">
+        <img src="../week2/images/targetexample.JPG" alt="Target's home page" />
+      </p>
+      <p class="description">
+        Target's design is wisely grouped into easy to read section. This tells the brain that all the wording which is
+        in close proximity is related to each other. The ideas for Mother's Day gifts is all grouped together and the
+        brain easily understand that it can click on the button under this title to get ideas. Even the smaller heading
+        of where your shopping is easy to see and seperate from the rest of the text because of the proximity between
+        the text around it.
+
+      </p>
+    </section>
+    <section id="principle3">
+      <h3 class="principle">Alignment</h3>
+      <p class="company">DoorDash</p>
+      <p class="link">
+        <a href="https://www.doordash.com/">www.doordash.com</a>
+      </p>
+      <p class="image">
+        <img src="../week2/images/doordashexample.JPG" alt="DoorDash's home page" />
+      </p>
+      <p class="description">
+        Doordash's design uses alignment to it's advantage to help keep the eye on the page longer. The transition from
+        right alignment of the top menu to centered to left alignment helps the eye flow down the page. The different
+        alignments helps break up the page into sections that are easy to see and seperate.
+      </p>
+    </section>
 
   </main>
 
   <footer>
     <p>
-      &copy; <span id="lesson2year"></span>| Shayla Dance | <a href='https://www.byui.edu/online'
-        target='_blank'>BYUI Online Learning</a>
+      &copy; <span id="lesson2year"></span>| Shayla Dance | <a href='https://www.byui.edu/online' target='_blank'>BYUI
+        Online Learning</a>
     </p>
     <p>
       Last Updated: <span id="lesson2latestEdit"></span>
     </p>
   </footer>
-  <script src="./javascript/lesson2year.js"></script>
+  <script src="../week2/javascript/year.js"></script>
 </body>
 
 </html>
