--- a/week2/design-principles.html
+++ b/week2/design-principles.html
@@ -10,9 +10,9 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Anton&family=Libre+Franklin&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-  <link rel="stylesheet" href="#">
-  <link rel="stylesheet" href="#">
-  <link rel="stylesheet" href="#">
+  <link rel="stylesheet" href="../week2/css/small.css">
+  <link rel="stylesheet" href="../week2/css/medium.css">
+  <link rel="stylesheet" href="../week2/css/large.css">
 </head>
 
 <body>
