--- a/week1/index.html
+++ b/week1/index.html
@@ -9,7 +9,7 @@
     content="Assignment portal for Shayla Dance in WDD 230-03 at Brigham Young University - Idaho">
 
   <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Anton&family=Libre+Franklin&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Lato&family=Roboto:ital,wght@1,900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
   <link rel="stylesheet" href="./css/small.css">
   <link rel="stylesheet" href="./css/medium.css">
