--- a/week2/design-principles.html
+++ b/week2/design-principles.html
@@ -8,7 +8,7 @@
   <meta name="description" content="Shayla Dance's Lesson 2 assignment for WDD230 BYU-Idaho">
 
   <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Anton&family=Libre+Franklin&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Lato&family=Roboto:ital,wght@1,900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
   <link rel="stylesheet" href="../week2/css/small.css">
   <link rel="stylesheet" href="../week2/css/medium.css">
