--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
   <link href="https://fonts.googleapis.com/css2?family=Lato&family=Roboto:ital,wght@1,900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
   <link rel="stylesheet" href="small.css">
-  <link rel="stylesheet" href=".medium.css">
+  <link rel="stylesheet" href="medium.css">
 </head>
 
 <body>
 
   <header>
-    <img src="./images/portraitofshayla.jpg" alt="Picture of Shayla Dance with a gray coat">
+    <img src="portraitofshayla.jpg" alt="Picture of Shayla Dance with a gray coat">
     <h1>Shayla Dance</h1>
   </header>
 
@@ -52,7 +52,7 @@
       Last Updated: <span id="latestEdit"></span>
     </p>
   </footer>
-  <script src="./javascript/time.js"></script>
+  <script src="time.js"></script>
 </body>
 
 </html>
