--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 
 
       <ul>
-        <li><a href="./week2/design-principles.html">Lesson 2 Assignment</a></li>
-        <li>Lesson 03:</li>
+        <li><a href="./week2/design-principles.html">Lesson 2</a></li>
+        <li><a href="./lesson3/index.html">Lesson 3</a></li>
         <li>Lesson 04:</li>
         <li>Lesson 05:</li>
         <li>Lesson 06:</li>
