--- a/lesson3/typography.html
+++ b/lesson3/typography.html
@@ -18,23 +18,22 @@
 
 <body>
 
-    <header>
+  <header>
+    <div>
+      <img src="icon.png" alt="Roadway Weather Channel logo">
+          <h1>Roadway Weather Channel</h1>
+      </div>
+  </header>
 
-        <div> 
-            <img src="iconfinder_weather-22_1530369 (1).png" alt="Roadway Weather Channel logo">      
-            <h1>Roadway Weather Channel</h1>
-            <p>Safer Travels Ahead</p>
-        </div>
-        <nav>
-            <ul>
+      <nav>
+          <ul>
               <li><a href="../lesson3/index.html">Home</a></li>
               <li><a href="../lesson3/target-audience.html">Target Audience</a></li>
               <li><a href="../lesson3/color-scheme.html">Color Scheme</a></li>
               <li><a href="../lesson3/typography.html">Typography</a></li>
-            </ul>
-          </nav>
+          </ul>
+      </nav>
 
-    </header>
 
   <main>
     <table>
@@ -44,43 +43,46 @@
         <td>Font Size</td>
         <td>Font Color</td>
         <td>Background Color</td>
-        <td>Sample</td>
       </tr>
 
       <tr>
         <td>Site Header</td>
         <td>Lora</td>
-        <td>0px</td>
-        <td>#</td>
-        <td>#</td>
-        <td>Roadway Weather Channel</td>
+        <td>Default</td>
+        <td>#e5e6e4</td>
+        <td>#1B263B</td>
       </tr>
     
       <tr>
         <td>Primary Nav</td>
         <td>Lora</td>
-        <td>0px</td>
-        <td>#</td>
-        <td>#</td>
-        <td>Roadway Weather Channel</td>
+        <td>Default</td>
+        <td>Black</td>
+        <td>#778DA9</td>
+      </tr>
+
+      <tr>
+        <td>Nav Hover</td>
+        <td>Lora</td>
+        <td>Default</td>
+        <td>#e5e6e4</td>
+        <td>#1B263B</td>
       </tr>
   
       <tr>
         <td>Footer</td>
-        <td>Lora</td>
-        <td>0px</td>
-        <td>#</td>
-        <td>#</td>
-        <td>Roadway Weather Channel</td>
+        <td>Quicksand</td>
+        <td>14px</td>
+        <td>#e5e6e4</td>
+        <td>#1B263B</td>
       </tr>
 
       <tr>
         <td>Main Body</td>
         <td>Quicksand</td>
-        <td>0px</td>
-        <td>#</td>
-        <td>#</td>
-        <td>Roadway Weather Channel</td>
+        <td>Default</td>
+        <td>Black</td>
+        <td>gradient: white,#778DA9</td>
       </tr>
     </table>
 
