--- a/lesson3/color-scheme.html
+++ b/lesson3/color-scheme.html
@@ -17,24 +17,24 @@
 
 <body>
   <header>
-
     <div>
-      <img src="iconfinder_weather-22_1530369 (1).png" alt="Roadway Weather Channel logo">
-      <h1>Roadway Weather Channel</h1>
-      <p>Safer Travels Ahead</p>
-    </div>
-    <nav>
-      <ul>
-        <li><a href="../lesson3/index.html">Home</a></li>
-        <li><a href="../lesson3/target-audience.html">Target Audience</a></li>
-        <li><a href="../lesson3/color-scheme.html">Color Scheme</a></li>
-        <li><a href="../lesson3/typography.html">Typography</a></li>
-      </ul>
-    </nav>
-
+          <img src="icon.png" alt="Roadway Weather Channel logo">
+          <h1>Roadway Weather Channel</h1>
+      </div>
   </header>
 
+      <nav>
+          <ul>
+              <li><a href="../lesson3/index.html">Home</a></li>
+              <li><a href="../lesson3/target-audience.html">Target Audience</a></li>
+              <li><a href="../lesson3/color-scheme.html">Color Scheme</a></li>
+              <li><a href="../lesson3/typography.html">Typography</a></li>
+          </ul>
+      </nav>
+
+
   <main>
+    <img src="colorscheme.JPG" alt="color scheme of site plan">
 <table>
   <tr>
     <td>Element</td>
@@ -43,22 +43,22 @@
 
   <tr>
     <td>Site Header</td>
-    <td> # </td>
+    <td> ##1B263B </td>
   </tr>
 
   <tr>
     <td>Primary Nav</td>
-    <td> # </td>
+    <td> #778DA9 </td>
   </tr>
 
   <tr>
     <td>Footer</td>
-    <td> # </td>
+    <td> #1B263B </td>
   </tr>
 
   <tr>
     <td>Main Body</td>
-    <td> # </td>
+    <td> gradient: white,#778DA9 </td>
   </tr>
 </table>
   </main>
