--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -18,12 +18,12 @@
 <body>
 
     <header>
-
-        <div>
-            <img src="iconfinder_weather-22_1530369 (1).png" alt="Roadway Weather Channel logo">
+      <div>
+        <img src="icon.png" alt="Roadway Weather Channel logo">
             <h1>Roadway Weather Channel</h1>
-            <p>Safer Travels Ahead</p>
         </div>
+    </header>
+
         <nav>
             <ul>
                 <li><a href="../lesson3/index.html">Home</a></li>
@@ -33,20 +33,21 @@
             </ul>
         </nav>
 
-    </header>
-
     <main>
         <section>
-            <h1>Site Plan: Purpose</h1>
-            <h2>Site Name</h2>
-            <p>Roadway Weather Channel</p>
+            <h2>Site Plan: Purpose</h2>
+            <h2>Site Name + Motto</h2>
+            <p>Name: Roadway Weather Channel <br>
+                Motto: Safer Travels Ahead
+                
+            </p>
             <h2>Available Domain Name</h2>
             <p>On
                 <a href="https://domains.google.com/registrar/search?searchTerm=roadwayweatherchannel&hl=en&_ga=2.19156600.1546741364.1620346743-2053009573.1620346743"
                     target="_blank">
                     Google Domains</a> the available domain name I would choose would be: roadwayweatherchannel.com</p>
             <h2>Logo</h2>
-            <img src="iconfinder_weather-22_1530369 (1).png" alt="Roadway Weather Channel logo">
+            <img class="index-icon" src="icon.png" alt="Roadway Weather Channel logo">
             <h2>Site Purpose</h2>
             <p>The purpose of Roadway Weather Channel is to help drivers have a safer trip on the road by showing
                 weather conditions in the area they will be traveling. Oftentimes, people look up the weather in order
