--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <li><a href="./week2/design-principles.html">Lesson 2</a></li>
         <li><a href="./lesson3/index.html">Lesson 3</a></li>
         <li><a href="./lesson4/preston-4.html">Lesson 4</a></li>
-        <li><a href="./lesson5/BOM/bom.html">BOM</a></li>
+        <li><a href="./lesson5/BOM/bom.html">BOM</a>|<a href="./lesson5/preston-5.html">Lesson 5</a></li>
         <li>Lesson 06:</li>
         <li>Lesson 07:</li>
         <li>Lesson 08:</li>
