--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
     </p>
   </footer>
   <script src="time.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
+  <script> WebFont.load({google: {families: ['Lato']}});</script>
 </body>
 
 </html>
