--- a/lesson5/preston-5.html
+++ b/lesson5/preston-5.html
@@ -42,7 +42,7 @@
 
         <img class="heroimg" src="images/michael-tuszynski-unsplash.jpg" alt="Hero Picture of Preston, Idaho">
 
-        <section>
+        <section class="stats">
             <h3>Weather Summary</h3>
             <p>Currently: 72°F</p>
             <p>High: 85°F</p>
@@ -66,11 +66,11 @@
                         <p>87°F</p>
                     </td>
                     <td>
-                        <img src="images/cloudyweathericon.png" alt="cloudy weather">
+                        <img class="cloudy" src="images/cloudyweathericon.png" alt="cloudy weather">
                         <p>79°F</p>
                     </td>
                     <td>
-                        <img src="images/cloudyweathericon.png" alt="cloudy weather">
+                        <img class="cloudy" src="images/cloudyweathericon.png" alt="cloudy weather">
                         <p>75°F</p>
                     </td>
                     <td>
@@ -83,7 +83,7 @@
                     </td>
                 </tr>
             </table>
-
+ 
         </section>
 
         <section>
