--- a/lesson5/preston-5.html
+++ b/lesson5/preston-5.html
@@ -16,6 +16,9 @@
 </head>
 
 <body>
+    <div id="banner">
+        <p>Saturday- Preston Pancakes in the Park! 9:00 am Friday at the city park</p>
+      </div>
 
     <header>
         <img src="./images/icon.png" alt="Roadway Weather Channel logo">
@@ -39,7 +42,7 @@
 
     <main>
         <h2>Preston Idaho</h2>
-
+        <div class="herostats">
         <img class="heroimg" src="images/michael-tuszynski-unsplash.jpg" alt="Hero Picture of Preston, Idaho">
 
         <section class="stats">
@@ -49,7 +52,7 @@
             <p>Humidity: 37%</p>
             <p>Wind Speed: 15mph</p>
         </section>
-
+        </div>
         <section>
             <h3>5 Day Forecast</h3>
             <table>
@@ -63,23 +66,23 @@
                 <tr>
                     <td>
                         <img src="images/sunweathericon.png" alt="sunny weather">
-                        <p>87°F</p>
+                        <p class="daily-temp">87°F</p>
                     </td>
                     <td>
                         <img class="cloudy" src="images/cloudyweathericon.png" alt="cloudy weather">
-                        <p>79°F</p>
+                        <p class="daily-temp">79°F</p>
                     </td>
                     <td>
                         <img class="cloudy" src="images/cloudyweathericon.png" alt="cloudy weather">
-                        <p>75°F</p>
+                        <p class="daily-temp">75°F</p>
                     </td>
                     <td>
                         <img src="images/sunweathericon.png" alt="sunny weather">
-                        <p>80°F</p>
+                        <p class="daily-temp">80°F</p>
                     </td>
                     <td>
                         <img src="images/sunweathericon.png" alt="sunny weather">
-                        <p>85°F</p>
+                        <p class="daily-temp">85°F</p>
                     </td>
                 </tr>
             </table>
@@ -88,10 +91,10 @@
 
         <section>
             <h3>Article Name</h3>
-            <p><em>Written by: Author Name</em></p>
-            <img src="images/traffic.jpg" alt="cars in traffic">
+            <p class="author"><em>Written by: Author Name</em></p>
+            <img class="cars" src="images/traffic.jpg" alt="cars in traffic">
             
-            <p>
+            <p class="article-text">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
             dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
             ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
@@ -113,20 +116,18 @@
         </section>
 
 
-        <section>
-            <img src="images/prestongooglemap.JPG" alt="Google Maps of Preston Idaho">
+        <section class="contact-section">
+            <img class="map" src="images/prestongooglemap.JPG" alt="Google Maps of Preston Idaho">
             <h5>Contact Information</h5>
-            <img src="images/address-location.png" alt="address icon">
+            <div class="contact-text">
             <p>6516 State St Preston Idaho 83263</p>
-            <img src="images/phone-call.png" alt="cell phone icon">
-            +1 (208) 569 5214
-            <img src="images/mail.png" alt="email icon">
-            helpcenter@roadwayweatherchannel.com
-            
-            <a href="https://www.facebook.com/" target="_blank"><img src="images/facebook-square.png" alt="facebook icon"></a>
-            <a href="https://www.instagram.com/" target="_blank"><img src="images/black-instagram.png" alt="instagram icon"></a>
-            <a href="https://twitter.com/" target="_blank"><img src="images/twitter-square.png" alt="twitter icon"></a>
+            <p >+1 (208) 569 5214</p>
+            <p >helpcenter@roadwayweatherchannel.com</p>
 
+            <a href="https://www.facebook.com/" target="_blank"><img class="social" src="images/facebook-square.png" alt="facebook icon"></a>
+            <a href="https://www.instagram.com/" target="_blank"><img class="social" src="images/black-instagram.png" alt="instagram icon"></a>
+            <a href="https://twitter.com/" target="_blank"><img class="social" src="images/twitter-square.png" alt="twitter icon"></a>
+        </div>
         </section>
 
     </main>
