--- a/lesson6/preston-6.html
+++ b/lesson6/preston-6.html
@@ -43,14 +43,18 @@
     <main>
         <h2>Preston Idaho</h2>
         <div class="herostats">
-        <img class="heroimg" src="images/michael-tuszynski-unsplash.jpg" alt="Hero Picture of Preston, Idaho">
+            <picture>
+                <source srcset="images/heroimgmedium.jpg" media="(min-width: 37.5em) and (max-width: 50em)">
+                <source srcset="images/heroimglarge.jpg" media="(min-width: 50em)">
+                <img class="heroimg" src="./images/heroimgsmall.jpg" alt="hero img">
+            </picture>
 
         <section class="stats">
             <h3>Weather Summary</h3>
-            <p>Currently: 72°F</p>
-            <p>High: 85°F</p>
-            <p>Humidity: 37%</p>
-            <p>Wind Speed: 15mph</p>
+            <p>Currently: Sunny</p>
+            <p>High: <span id="tempF">47</span>°F</p>
+            <p>Wind Speed: <span id="speed">21</span> mph</p>
+            <p>Wind Chill: <span id="windChill"></span> mph</p>
         </section>
         </div>
         <section>
@@ -143,6 +147,8 @@
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
     <script src="./javascript/scripts.js"></script>
+    <script src="./javascript/fontload.js"></script>
+    <script src="./javascript/windchill.js"></script>
 </body>
 
 </html>
