--- a/lesson5/preston-5.html
+++ b/lesson5/preston-5.html
@@ -48,7 +48,7 @@
         <section class="stats">
             <h3>Weather Summary</h3>
             <p>Currently: 72°F</p>
-            <p>High: 85°F</p>
+            <p>tempF: 85°F</p>
             <p>Humidity: 37%</p>
             <p>Wind Speed: 15mph</p>
         </section>
