--- a/lesson6/preston-6.html
+++ b/lesson6/preston-6.html
@@ -52,10 +52,10 @@
         <section class="stats">
             <h3>Weather Summary</h3>
             <p>Currently: Sunny</p>
-            <p>High: <span id="tempF">47</span>°F</p>
-            <p>Wind Speed: <span id="speed">21</span> mph</p>
-            <p>Wind Chill: <span id="windChill"></span> mph</p>
-        </section>
+            <p>Current Temp: <span id="tempF" >48</span> </p>
+            <p> Humidity: 22%</p>
+            <p> Wind Speed: <span id="speed">21</span> mph </p>
+            <p>Wind Chill: <span id="windChill"></span>°F</p>
         </div>
         <section>
             <h3>5 Day Forecast</h3>
