--- a/lesson6/preston-6.html
+++ b/lesson6/preston-6.html
@@ -48,7 +48,7 @@
                 <source srcset="images/heroimglarge.jpg" media="(min-width: 50em)">
                 <img class="heroimg" src="./images/heroimgsmall.jpg" alt="hero img">
             </picture>
-
+        </div>
         <section class="stats">
             <h3>Weather Summary</h3>
             <p>Currently: Sunny</p>
@@ -56,7 +56,7 @@
             <p> Humidity: 22%</p>
             <p> Wind Speed: <span id="speed">21</span> mph </p>
             <p>Wind Chill: <span id="windChill"></span>°F</p>
-        </div>
+        </section>
         <section>
             <h3>5 Day Forecast</h3>
             <table>
