--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <li><a href="./lesson5/BOM/bom.html">BOM</a>|<a href="./lesson5/preston-5.html">Lesson 5</a></li>
         <li><a href="./lesson6/preston-6.html">Lesson 6</a></li>
         <li><a href="./lesson7/lazyload/lazy-load.html">Lazy Loading</a> | <a href='./lesson7/lesson-7/gallery-7.html'>Lesson 7</a></li>
-        <li>Lesson 08:</li>
+        <li><a href="./lesson8/stormcenter/storm-center.html">Storm Center</a> | <a href='./lesson8/table/tablebuild.html'>Table Build</a></li>
         <li>Lesson 09:</li>
         <li>Lesson 10:</li>
       </ul>
