--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <li><a href="./lesson9/prophet/prophets.html">Prophets</a> |
         <a href = "./lesson9/home/wireframes-home.html">Wireframes for Home Page</a> | 
         <a href='./lesson9/home/index.html'>Home Page</a></li>
-        <li>Lesson 10:</li>
+        <li><a href="./lesson10/preston10/preston-10.html">Preston Page</a></li>
       </ul>
     </div>
 
