--- a/lesson10/preston10/preston-10.html
+++ b/lesson10/preston10/preston-10.html
@@ -68,26 +68,18 @@
                     <th><span id='weekday4'></span></th>
                 </tr>
                 <tr>
-                    <td>
-                        <span id='imgs0'></span>
-                        <span id='hightemp0'></span>
-                    </td>
-                    <td>
-                        <span id='imgs1'></span>
-                        <span id='hightemp1'></span>
-                    </td>
-                    <td>
-                        <span id='imgs2'></span>
-                        <span id='hightemp2'></span>
-                    </td>
-                    <td>
-                        <span id='imgs3'></span>
-                        <span id='hightemp3'></span>
-                    </td>
-                    <td>
-                        <span id='imgs4'></span>
-                        <span id='hightemp4'></span>
-                    </td>
+                    <td><img id='imgs0'></td>
+                    <td><img id='imgs1'></td>
+                    <td><img id='imgs2'></td>
+                    <td><img id='imgs3'></td>
+                    <td><img id='imgs4'></td>
+                </tr>
+                <tr>
+                    <td><span id='hightemp0'></span></td>
+                    <td><span id='hightemp1'></span></td>
+                    <td><span id='hightemp2'></span></td>
+                    <td><span id='hightemp3'></span></td>
+                    <td><span id='hightemp4'></span></td>
                 </tr>
             </table>
  
