--- a/lesson7/lesson-7/gallery-7.html
+++ b/lesson7/lesson-7/gallery-7.html
@@ -38,7 +38,7 @@
 
     <main>
         <h2>Weather Gallery</h2>
-        <section class='Gallery'></section>
+        <section class='gallery'>
             <picture class='card'>
                 <img src='./images/placeholder.JPG' data-src='./images/green.JPG' alt='grove of trees'>
                 <figcaption>Sunny grove of trees</figcaption>
