--- a/lesson11/lesson-7/gallery-7.html
+++ b/lesson11/lesson-7/gallery-7.html
@@ -16,10 +16,6 @@
 </head>
 
 <body>
-    <div id="banner">
-        <p>Saturday- Preston Pancakes in the Park! 9:00 am Friday at the city park</p>
-      </div>
-      
      <header>
         <img src="./images/icon.png" alt="Roadway Weather Channel logo">
         <section class="headings">
@@ -31,18 +27,18 @@
     <nav class="clearfix navigation">
         <button onclick="toggleMenu()">&#9776;</button>
         <ul id="navMenu" class="hidden">
-            <li><a href="../home/index.html">Home</a></li>
-            <li><a href="../preston/preston-10.html">Preston</a></li>
-            <li><a href="../sodasprings/sodasprings.html">Soda Springs</a></li>
-            <li><a href="../fishhaven/fishhaven.html">Fish Haven</a></li>
-            <li><a href="../stormcenter/storm-center.html">Storm Center</a></li>
-            <li><a href="../gallery/gallery-7.html">Gallery</a></li>
+            <li><a href="#">Home</a></li>
+            <li class="active"><a href="https://shaymueller.github.io/wdd230/lesson6/preston-6.html">Preston</a></li>
+            <li><a href="#">Soda Springs</a></li>
+            <li><a href="#">Fish Haven</a></li>
+            <li><a href="#">Storm Center</a></li>
+            <li><a href="../lesson-7/gallery-7.html">Gallery</a></li>
         </ul>
     </nav>
 
     <main>
         <h2>Weather Gallery</h2>
-        <section class='Gallery'></section>
+        <section class='gallery'>
             <picture class='card'>
                 <img src='./images/placeholder.JPG' data-src='./images/green.JPG' alt='grove of trees'>
                 <figcaption>Sunny grove of trees</figcaption>
