--- a/lesson7/lesson-7/gallery-7.html
+++ b/lesson7/lesson-7/gallery-7.html
@@ -40,19 +40,19 @@
         <h2>Weather Gallery</h2>
         <section class='gallery'>
             <picture class='card'>
-                <img src='./images/placeholder.JPG' data-src='./images/green.JPG' alt='grove of trees'>
+                <img src='./images/placeholder.JPG' data-src='./images/green.jpg' alt='grove of trees'>
                 <figcaption>Sunny grove of trees</figcaption>
             </picture>
             <picture class='card'>
-                <img src='./images/placeholder.JPG' data-src='./images/fog.JPG' alt='foggy mountian with hillside'>
+                <img src='./images/placeholder.JPG' data-src='./images/fog.jpg' alt='foggy mountian with hillside'>
                 <figcaption>Foggy mountain side</figcaption>
             </picture>
             <picture class='card'>
-                <img src='./images/placeholder.JPG' data-src='./images/light.JPG' alt='lightning storm'>
+                <img src='./images/placeholder.JPG' data-src='./images/light.jpg' alt='lightning storm'>
                 <figcaption>Lightning storm overhead</figcaption>
             </picture>
             <picture class='card'>
-                <img src='./images/placeholder.JPG' data-src='./images/snow.JPG' alt='white snow on trees'>
+                <img src='./images/placeholder.JPG' data-src='./images/snow.jpg' alt='white snow on trees'>
                 <figcaption>Snow covered orchard</figcaption>
             </picture>
             <picture class='card'>
