--- a/lesson11/sodasprings/sodasprings.html
+++ b/lesson11/sodasprings/sodasprings.html
@@ -41,7 +41,7 @@
     </nav>
 
     <main>
-        <h2>Preston Idaho</h2>
+        <h2>Soda Springs</h2>
         <div class="herostats">
             <picture>
                 <source srcset="images/heroimgmedium.jpg" media="(min-width: 37.5em) and (max-width: 50em)">
