--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         <a href = "./lesson9/home/wireframes-home.html">Wireframes for Home Page</a> | 
         <a href='./lesson9/home/index.html'>Home Page</a></li>
         <li><a href="./lesson10/preston10/preston-10.html">Preston Page</a></li>
+        <li><a href="./lesson11/home/index.html">Completed Website</a></li>
       </ul>
     </div>
 
