--- a/lesson11/gallery/gallery-7.html
+++ b/lesson11/gallery/gallery-7.html
@@ -27,12 +27,12 @@
     <nav class="clearfix navigation">
         <button onclick="toggleMenu()">&#9776;</button>
         <ul id="navMenu" class="hidden">
-            <li><a href="#">Home</a></li>
-            <li class="active"><a href="https://shaymueller.github.io/wdd230/lesson6/preston-6.html">Preston</a></li>
-            <li><a href="#">Soda Springs</a></li>
-            <li><a href="#">Fish Haven</a></li>
-            <li><a href="#">Storm Center</a></li>
-            <li><a href="../lesson-7/gallery-7.html">Gallery</a></li>
+            <li><a href="../home/index.html">Home</a></li>
+            <li><a href="../preston/preston-10.html">Preston</a></li>
+            <li><a href="../sodasprings/sodasprings.html">Soda Springs</a></li>
+            <li><a href="../fishhaven/fishhaven.html">Fish Haven</a></li>
+            <li><a href="../stormcenter/storm-center.html">Storm Center</a></li>
+            <li><a href="../gallery/gallery-7.html">Gallery</a></li>
         </ul>
     </nav>
 
