--- a/lesson9/home/index.html
+++ b/lesson9/home/index.html
@@ -45,7 +45,7 @@
         <div class="herostats">
             <picture>
                 <source srcset="images/heroimgmedium.jpg" media="(min-width: 37.5em) and (max-width: 50em)">
-                <source srcset="images/heroimglarge.jpg" media="(min-width: 50em)">
+                <source srcset="images/heroimglargee.jpg" media="(min-width: 50em)">
                 <img class="heroimg" src="./images/heroimgsmall.jpg" alt="hero img">
             </picture>
         </div>
