--- a/lesson11/gallery/gallery-7.html
+++ b/lesson11/gallery/gallery-7.html
@@ -32,7 +32,7 @@
             <li><a href="../sodasprings/sodasprings.html">Soda Springs</a></li>
             <li><a href="../fishhaven/fishhaven.html">Fish Haven</a></li>
             <li><a href="../stormcenter/storm-center.html">Storm Center</a></li>
-            <li><a href="../gallery/gallery-7.html">Gallery</a></li>
+            <li class="active"><a href="../gallery/gallery-7.html">Gallery</a></li>
         </ul>
     </nav>
 
