--- a/lesson11/preston/preston-10.html
+++ b/lesson11/preston/preston-10.html
@@ -32,7 +32,7 @@
         <button onclick="toggleMenu()">&#9776;</button>
         <ul id="navMenu" class="hidden">
             <li><a href="../home/index.html">Home</a></li>
-            <li><a href="../preston/preston-10.html">Preston</a></li>
+            <li class="active"><a href="../preston/preston-10.html">Preston</a></li>
             <li><a href="../sodasprings/sodasprings.html">Soda Springs</a></li>
             <li><a href="../fishhaven/fishhaven.html">Fish Haven</a></li>
             <li><a href="../stormcenter/storm-center.html">Storm Center</a></li>
