--- a/lesson11/sodasprings/sodasprings.html
+++ b/lesson11/sodasprings/sodasprings.html
@@ -33,7 +33,7 @@
         <ul id="navMenu" class="hidden">
             <li><a href="../home/index.html">Home</a></li>
             <li><a href="../preston/preston-10.html">Preston</a></li>
-            <li><a href="../sodasprings/sodasprings.html">Soda Springs</a></li>
+            <li class="active"><a href="../sodasprings/sodasprings.html">Soda Springs</a></li>
             <li><a href="../fishhaven/fishhaven.html">Fish Haven</a></li>
             <li><a href="../stormcenter/storm-center.html">Storm Center</a></li>
             <li><a href="../gallery/gallery-7.html">Gallery</a></li>
