--- a/lesson11/preston/preston-10.html
+++ b/lesson11/preston/preston-10.html
@@ -18,7 +18,7 @@
 <body>
     <div id="banner">
         <p>Saturday- Preston Pancakes in the Park! 9:00 am Friday at the city park</p>
-      </div>
+    </div>
 
     <header>
         <img src="./images/icon.png" alt="Roadway Weather Channel logo">
@@ -82,30 +82,29 @@
                     <td><span id='hightemp4'></span></td>
                 </tr>
             </table>
- 
+
         </section>
 
         <section>
-            <h3>Article Name</h3>
-            <p class="author"><em>Written by: Author Name</em></p>
+            <h3>Idaho Days Returns In Grand Fashion</h3>
+            <p class="author"><em>Written by: Patsy Shipley</em></p>
             <img class="cars" src="images/traffic.jpg" alt="cars in traffic">
-            
+
             <p class="article-text">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-            ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
-            nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
-            anim id est laborum. <br>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-            ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
-            nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
-            anim id est laborum. <br>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-            ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
-            nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
-            anim id est laborum. 
+                “Spectacular! Historical! Practically perfect in every way!” <br>
+
+                Those are some of the sentiments heard regarding Idaho Days 2021, which was immensely enjoyed by the
+                crows who gathered in Franklin for the traditional celebration. From beginning to end, chairman Nicole
+                Nielson packed in the festivities delighting young and old with down-home Franklin hospitality and
+                entertainment Thursday through Saturday, June 24-26. <br>
+
+                Six-year-old Norah Harrison and her family from Atlanta, Georgia, raced to join the Color Run on
+                Thursday evening, followed by the Box Car Annapolis, where her older brother, Will, sprayed ‘windshield’
+                faces with water in the ‘pit’. Getting a cracker at the pit stop was fun for Norah. “My kids had a
+                wonderful time, and it was so great to see all of the kids have so much fun together,” said their dad,
+                Blake Harrison. As darkness settled in, “The Croods 2” lit up the big screen on Franklin’s city
+                building’s outdoor stage. <br>
+                Read more at: <a href="https://www.hjnews.com/preston/idaho-days-returns-in-grand-fashion/article_1c63b0ed-b9e5-5558-a824-220deba6953e.html">hjnews.com/preston</a>
             </p>
 
 
@@ -116,14 +115,17 @@
             <img class="map" src="images/prestongooglemap.JPG" alt="Google Maps of Preston Idaho">
             <h5>Contact Information</h5>
             <div class="contact-text">
-            <p>6516 State St Preston Idaho 83263</p>
-            <p >+1 (208) 569 5214</p>
-            <p >helpcenter@roadwayweatherchannel.com</p>
+                <p>6516 State St Preston Idaho 83263</p>
+                <p>+1 (208) 569 5214</p>
+                <p>helpcenter@roadwayweatherchannel.com</p>
 
-            <a href="https://www.facebook.com/" target="_blank"><img class="social" src="images/facebook-square.png" alt="facebook icon"></a>
-            <a href="https://www.instagram.com/" target="_blank"><img class="social" src="images/black-instagram.png" alt="instagram icon"></a>
-            <a href="https://twitter.com/" target="_blank"><img class="social" src="images/twitter-square.png" alt="twitter icon"></a>
-        </div>
+                <a href="https://www.facebook.com/" target="_blank"><img class="social" src="images/facebook-square.png"
+                        alt="facebook icon"></a>
+                <a href="https://www.instagram.com/" target="_blank"><img class="social"
+                        src="images/black-instagram.png" alt="instagram icon"></a>
+                <a href="https://twitter.com/" target="_blank"><img class="social" src="images/twitter-square.png"
+                        alt="twitter icon"></a>
+            </div>
         </section>
 
     </main>
