--- a/lesson11/sodasprings/sodasprings.html
+++ b/lesson11/sodasprings/sodasprings.html
@@ -18,7 +18,7 @@
 <body>
     <div id="banner">
         <p>Saturday- Preston Pancakes in the Park! 9:00 am Friday at the city park</p>
-      </div>
+    </div>
 
     <header>
         <img src="./images/icon.png" alt="Roadway Weather Channel logo">
@@ -82,30 +82,35 @@
                     <td><span id='hightemp4'></span></td>
                 </tr>
             </table>
- 
+
         </section>
 
         <section>
-            <h3>Article Name</h3>
+            <h3>Attempted traffic stop at Soda Springs leads to high speed chase</h3>
             <p class="author"><em>Written by: Author Name</em></p>
             <img class="cars" src="images/traffic.jpg" alt="cars in traffic">
-            
+
             <p class="article-text">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-            ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
-            nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
-            anim id est laborum. <br>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-            ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
-            nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
-            anim id est laborum. <br>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-            ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
-            nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
-            anim id est laborum. 
+                CARIBOU COUNTY | Press Release – On February 01, 2021, at about 8:45 pm, the Caribou County Sheriff’s
+                Office attempted to stop a traffic violator who was traveling at an excessive speed through the City of
+                Soda Springs. <br>
+
+                The vehicle failed to yield and attempted to outrun the pursuing law enforcement vehicles. The pursuit
+                reached speeds of 100 plus mph along US30 towards Bannock County. The driver of the vehicle lost control
+                of the vehicle and crashed at the intersection of Potter Rd and US 30 in Bannock County.<br>
+
+                Life flight was initially dispatched, but the driver was transported by ground ambulance to Portneuf
+                Regional Medical Center and admitted.<br>
+
+                Chandler Lippert, age 28, of Clayton, NC. was charged with felony eluding and driving under the
+                influence of alcohol and/or drugs.<br>
+
+                The pursuit was assisted by the Soda Springs Police Department.<br>
+
+                This is the second attempt to elude sheriff’s deputies to have occurred in Caribou County in under two
+                weeks. Both times the drivers have been apprehended and face serious criminal charges.<br>
+
+                Read more at <a href="https://mylocalradio.com/attempted-traffic-stop-at-soda-springs-leads-to-high-speed-chase-crash/">mylocalradio.com</a>
             </p>
 
 
@@ -116,14 +121,17 @@
             <img class="map" src="images/prestongooglemap.JPG" alt="Google Maps of Preston Idaho">
             <h5>Contact Information</h5>
             <div class="contact-text">
-            <p>6516 State St Preston Idaho 83263</p>
-            <p >+1 (208) 569 5214</p>
-            <p >helpcenter@roadwayweatherchannel.com</p>
+                <p>6516 State St Preston Idaho 83263</p>
+                <p>+1 (208) 569 5214</p>
+                <p>helpcenter@roadwayweatherchannel.com</p>
 
-            <a href="https://www.facebook.com/" target="_blank"><img class="social" src="images/facebook-square.png" alt="facebook icon"></a>
-            <a href="https://www.instagram.com/" target="_blank"><img class="social" src="images/black-instagram.png" alt="instagram icon"></a>
-            <a href="https://twitter.com/" target="_blank"><img class="social" src="images/twitter-square.png" alt="twitter icon"></a>
-        </div>
+                <a href="https://www.facebook.com/" target="_blank"><img class="social" src="images/facebook-square.png"
+                        alt="facebook icon"></a>
+                <a href="https://www.instagram.com/" target="_blank"><img class="social"
+                        src="images/black-instagram.png" alt="instagram icon"></a>
+                <a href="https://twitter.com/" target="_blank"><img class="social" src="images/twitter-square.png"
+                        alt="twitter icon"></a>
+            </div>
         </section>
 
     </main>
